# connect4

./: .pylintrc  connect4.py  main.py  mypy.ini  pyproject.toml  trainer.py  xxx-495000.weights
model/: Connect4Board.py  Connect4Game.py  DQN.py  DQNAgent.py  RandomAgent.py  RuleBasedAgent.py  connect4.py  trainer.py
tests/: test_RuleBasedAgent.py  test_connect4.py  test_is_sequence.py  test_winning_scenarios.py
utils/: time_it.py
