[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["laurencehook <laurence_hook@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.0"
mypy = "^1"
numpy = "^1.0"
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
pylint = "^2.0"
isort = "^5.0"
setuptools = "^68.0"
wandb = "^0"
torch = "^2.0"
torchvision = "^0.15"
colorama = "^0"
loguru = "^0.7"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 80
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
